Add accessibility ID to the icon next to autosuggest drop down for iPads.

BUG=704158

Review-Url: https://codereview.chromium.org/2769213004
Cr-Commit-Position: refs/heads/master@{#459487}

Former-commit-id: ec4834647c37a0b0b3a6b7cfa0a45f590eb9bd46